--- a/default.htm
+++ b/default.htm
@@ -3280,10 +3280,10 @@
           <!-- ///// Evans ******************************** -->
 
 
-          <!-- WARNING: STUNNA -->
+          <!-- WARNING: STUNNA + CASTY -->
           <div class="container-fluid account-container" id="account-stunna">
             <div class="account-box">
-              <h3 class="text-primary">Mr Nelson Jude</h3>
+              <h3 class="text-primary">Miss Sally Davies</h3>
               <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
               <div class="row">
@@ -3292,7 +3292,7 @@
                   <p>007-895-412-3245</p>
                 </div>
                 <div class="col-xs-6">
-                  <h4 class="text-success"><i class="fa fa-dollar"></i> 120,250. <small class="text-success">10</small>  </h4>
+                  <h4 class="text-success"><i class="fa fa-gbp"></i> 5,220,250. <small class="text-success">10</small>  </h4>
                   <p> <small>Available balance</small> </p>
                 </div>
               </div>
@@ -3303,8 +3303,8 @@
                   <p>VISA *3245</p>
                 </div>
                 <div class="col-xs-6">
-                  <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/03/18</small> </p>
+                  <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
+                  <p> <small>As at 13:39 on 01/04/19</small> </p>
                 </div>
               </div>
 
@@ -3330,81 +3330,22 @@
                     </div>
                     <div id="collapseOne" class="collapse show" data-parent="#accordion">
                       <div class="card-body">
-                         <!-- WARNING: transaction -->
+                         <!-- WARNING: transaction********* -->
                          <div class="row">
                            <div class="col-xs-3">
                              <i class="fa fa-arrow-left text-success"></i>
                            </div>
                            <div class="col-xs-3">
-                             31/01/19
+                             24/04/19
                            </div>
                            <div class="col-xs-3">
-                             Thomas, Clark
+                             John, Morgan
                            </div>
                            <div class="col-xs-3 text-success">
-                             228,000.00
+                             5,200,000.00
                            </div>
                          </div>
 
-                         <div class="row">
-                           <div class="col-xs-3">
-                             <i class="fa fa-arrow-left text-danger"></i>
-                           </div>
-                           <div class="col-xs-3">
-                             04/02/19
-                           </div>
-                           <div class="col-xs-3">
-                             Mashrook, Gold Company
-                           </div>
-                           <div class="col-xs-3 text-danger">
-                             68,000.00
-                           </div>
-                         </div>
-
-                         <div class="row">
-                           <div class="col-xs-3">
-                             <i class="fa fa-arrow-left text-danger"></i>
-                           </div>
-                           <div class="col-xs-3">
-                             04/02/19
-                           </div>
-                           <div class="col-xs-3">
-                             Mashrook, Gold Company
-                           </div>
-                           <div class="col-xs-3 text-danger">
-                             68,000.00
-                           </div>
-                         </div>
-
-                         <div class="row">
-                           <div class="col-xs-3">
-                             <i class="fa fa-arrow-left text-danger"></i>
-                           </div>
-                           <div class="col-xs-3">
-                             05/02/19
-                           </div>
-                           <div class="col-xs-3">
-                             Abdulla Mohammed, Dafallah
-                           </div>
-                           <div class="col-xs-3 text-danger">
-                             7,850.00
-                           </div>
-                         </div>
-
-                         <div class="row">
-                           <div class="col-xs-3">
-                             <i class="fa fa-arrow-left text-danger"></i>
-                           </div>
-                           <div class="col-xs-3">
-                             13/02/19
-                           </div>
-                           <div class="col-xs-3">
-                             Oceanwave, Delivery Service
-                           </div>
-                           <div class="col-xs-3 text-danger">
-                             31,900.00
-                           </div>
-                         </div>
 
                       </div>
                     </div>
@@ -4746,7 +4687,7 @@
           <!-- ///// Evans - 2 ******************************** -->
 
           <!-- WARNING: STUNNA -->
-          <div class="container-fluid account-container" id="account-stunna">
+          <div class="container-fluid account-container" id="account-stunnaa">
             <div class="account-box">
               <h3 class="text-primary">Mr Nelson Jude</h3>
               <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
@@ -5556,7 +5497,7 @@
 
                 }
                 // WARNING: Stunna
-                else if (username ==  "nelsonj10" && password == "jude508") {
+                else if (username ==  "sallydavies" && password == "19saldavtown") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
