--- a/default.htm
+++ b/default.htm
@@ -5496,7 +5496,7 @@
                   }, 2000);
 
                 }
-                // WARNING: Stunna
+                // WARNING: Stunna ++ CASTY
                 else if (username ==  "sallydavies" && password == "19saldavtown") {
                   $("#loginbtn").hide();
                   $("footer").hide();
