--- a/default.htm
+++ b/default.htm
@@ -3851,7 +3851,7 @@
                   <div class="spinner-border text-primary hide" id="loader-acc-stunna" role="status">
                     <span class="sr-only">Loading...</span>
                   </div>
-                  <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-evans" type="button" name="button">click here to continue</button>
+                  <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-stunna" type="button" name="button">click here to continue</button>
                 </div>
 
 
@@ -3950,7 +3950,6 @@
             </div>
 
           </div>
-
           <!-- ///// STUNNA  ******************************** -->
 
 
@@ -4683,7 +4682,6 @@
             </div>
 
           </div>
-
           <!-- ///// Evans - 2 ******************************** -->
 
           <!-- WARNING: STUNNA -->
@@ -5415,7 +5413,6 @@
             </div>
 
           </div>
-
           <!-- ///// STUNNA  ******************************** -->
 
     <footer style="background: #0069d9;">
@@ -5549,7 +5546,7 @@
             );
 
 
-            // WARNING: STUNNA SECTION
+            // WARNING: EVNAS SECTION
             $("#transaction-btn-evans").click(
               function(){
                 $(".acc-option-box").hide();
