--- a/default.htm
+++ b/default.htm
@@ -3985,7 +3985,7 @@
                   <p>007-895-412-3245</p>
                 </div>
                 <div class="col-xs-6">
-                  <h4 class="text-success"><i class="fa fa-gbp"></i> 50,220,250. <small class="text-success">10</small>  </h4>
+                  <h4 class="text-success"><i class="fa fa-usd"></i> 50,220,250. <small class="text-success">10</small>  </h4>
                   <p> <small>Available balance</small> </p>
                 </div>
               </div>
@@ -3996,7 +3996,7 @@
                   <p>VISA *3245</p>
                 </div>
                 <div class="col-xs-6">
-                  <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
+                  <h4 class="text-success"><i class="fa fa-usd"></i> 215. <small class="text-success">20</small>  </h4>
                   <p> <small>As at 13:39 on 01/04/19</small> </p>
                 </div>
               </div>
