--- a/default.htm
+++ b/default.htm
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon"  type="image/png" href="img/browser-logo.jpg">
+    <link rel="shortcut icon" type="image/png" href="img/browser.png">
 
     <style media="screen">
       #login-container{
@@ -36,6 +37,7 @@
         font-size: 1.5rem!important;
       }
     </style>
+
   </head>
 
   <body>
