--- a/default.htm
+++ b/default.htm
@@ -19,8 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon"  type="image/png" href="img/browser-logo.jpg">
-    <link rel="shortcut icon" type="image/png" href="img/browser.png">
+    <link rel="shortcut icon" type="image/png" href="bank-logo.png">
 
     <style media="screen">
       #login-container{
@@ -107,7 +106,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/04/19</small> </p>
+                    <p> <small>As at 13:05 on 01/05/19</small> </p>
                   </div>
                 </div>
 
@@ -118,7 +117,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 10,508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/04/19</small> </p>
+                    <p> <small>As at 13:05 on 01/05/19</small> </p>
                   </div>
                 </div>
 
@@ -2569,7 +2568,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/03/19</small> </p>
+                  <p> <small>As at 13:39 on 01/05/19</small> </p>
                 </div>
               </div>
 
@@ -3333,7 +3332,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/04/19</small> </p>
+                  <p> <small>As at 13:39 on 01/05/19</small> </p>
                 </div>
               </div>
 
@@ -4005,7 +4004,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-usd"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/04/19</small> </p>
+                  <p> <small>As at 13:39 on 01/05/19</small> </p>
                 </div>
               </div>
 
@@ -4678,7 +4677,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/03/18</small> </p>
+                  <p> <small>As at 13:39 on 01/05/19</small> </p>
                 </div>
               </div>
 
@@ -5409,7 +5408,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/03/18</small> </p>
+                  <p> <small>As at 13:39 on 01/05/19</small> </p>
                 </div>
               </div>
 
