--- a/default.htm
+++ b/default.htm
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>National Westing Banking Online - Bank account, mortgages and loan</title>
 
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -19,7 +21,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/png" href="bank-logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/browser.png">
+
 
     <style media="screen">
       #login-container{
@@ -36,7 +39,6 @@
         font-size: 1.5rem!important;
       }
     </style>
-
   </head>
 
   <body>
@@ -94,7 +96,7 @@
                     <p>0277014632760701</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 3,962,208. <small class="text-success">00</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 3,923,408. <small class="text-success">00</small>  </h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -106,7 +108,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:05 on 01/05/19</small> </p>
+                    <p> <small>As at 13:39 on 01/04/19</small> </p>
                   </div>
                 </div>
 
@@ -117,7 +119,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 10,508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:05 on 01/05/19</small> </p>
+                    <p> <small>As at 13:39 on 01/04/19</small> </p>
                   </div>
                 </div>
 
@@ -142,6 +144,36 @@
                       <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
                            <!-- WARNING: none -->
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-arrow-left text-danger"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               03/05/19
+                             </div>
+                             <div class="col-xs-3">
+                               Victor A. Lewis
+                             </div>
+                             <div class="col-xs-3 text-danger">
+                               15,000.00
+                             </div>
+                           </div>
+                           <hr>
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-arrow-left text-danger"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               03/05/19
+                             </div>
+                             <div class="col-xs-3">
+                               Victor A. Lewis
+                             </div>
+                             <div class="col-xs-3 text-danger">
+                               23,800.00
+                             </div>
+                           </div>
+                           <hr>
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-arrow-left text-danger"></i>
@@ -2568,7 +2600,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/05/19</small> </p>
+                  <p> <small>As at 13:39 on 01/03/19</small> </p>
                 </div>
               </div>
 
@@ -3332,7 +3364,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/05/19</small> </p>
+                  <p> <small>As at 13:39 on 01/04/19</small> </p>
                 </div>
               </div>
 
@@ -4004,7 +4036,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-usd"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/05/19</small> </p>
+                  <p> <small>As at 13:39 on 01/04/19</small> </p>
                 </div>
               </div>
 
@@ -4677,7 +4709,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/05/19</small> </p>
+                  <p> <small>As at 13:39 on 01/03/18</small> </p>
                 </div>
               </div>
 
@@ -5408,7 +5440,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/05/19</small> </p>
+                  <p> <small>As at 13:39 on 01/03/18</small> </p>
                 </div>
               </div>
 
