--- a/default.htm
+++ b/default.htm
@@ -2587,7 +2587,7 @@
                     <p>0277014632760701</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 90,408. <small class="text-success">00</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 90,408. <small class="text-success">00</small>  </h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -2598,7 +2598,7 @@
                     <p>VISA *1154</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 508. <small class="text-success">00</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 508. <small class="text-success">00</small>  </h4>
                     <p> <small>As at 13:39 on 01/04/19</small> </p>
                   </div>
                 </div>
@@ -2609,7 +2609,7 @@
                     <p>Savings</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 10,508. <small class="text-success">00</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 10,508. <small class="text-success">00</small>  </h4>
                     <p> <small>As at 13:39 on 01/04/19</small> </p>
                   </div>
                 </div>
