--- a/default.htm
+++ b/default.htm
@@ -2578,7 +2578,7 @@
             <!-- WARNING: EVANZZ -->
             <div class="container-fluid account-container" id="account-evanzz">
               <div class="account-box">
-                <h3 class="text-primary">Mr David Glover </h3>
+                <h3 class="text-primary">Vision Orphanage Home</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
@@ -8659,7 +8659,7 @@
                 }
 
                 // WARNING: EVANSS
-                else if (username ==  "dav_glover" && password == "glover7241") {
+                else if (username ==  "father_h19" && password == "zin08rept") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
