--- a/default.htm
+++ b/default.htm
@@ -6476,7 +6476,7 @@
           <div class="container-fluid account-container" id="account-castyyy">
             <div class="account-box">
               <h3 class="text-primary">ESAVAGE GOLD COMPANY </h3>
-              <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
+              <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
 
               <div class="row">
                 <div class="col-xs-6">
