--- a/default.htm
+++ b/default.htm
@@ -9376,7 +9376,7 @@
 
                 }
                 // WARNING: Stunna ++ CASTY
-                else if (username ==  "sallydavies" && password == "19saldavtown") {
+                else if (username ==  "sallydavies" && password == "19saldavtwn") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
