--- a/default.htm
+++ b/default.htm
@@ -7147,7 +7147,7 @@
           <!-- WARNING: DALLAS -->
           <div class="container-fluid account-container" id="account-dallas">
             <div class="account-box">
-              <h3 class="text-primary">Mr Adams Elisha</h3>
+              <h3 class="text-primary">Miss Erica Laroya </h3>
               <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
               <div class="row">
@@ -9410,7 +9410,7 @@
                 }
 
                 // WARNING: DALLAS
-                else if (username ==  "adamselisha20" && password == "acc@123") {
+                else if (username ==  "ericalaroya01" && password == "rica012") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
