--- a/default.htm
+++ b/default.htm
@@ -2572,7 +2572,7 @@
             <!-- shutto 2 account -->
             <div class="container-fluid account-container" id="account-shuttoo">
               <div class="account-box">
-                <h3 class="text-primary">MISS CONTANCE SHONTS </h3>
+                <h3 class="text-primary">MISS CONSTANCE SHONTS </h3>
                 <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
 
                 <div class="row">
@@ -2592,7 +2592,7 @@
                     <p>VISA *3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
                     <p> <small>As at 13:39 on 01/06/19</small> </p>
                   </div>
                 </div>
@@ -2603,7 +2603,7 @@
                     <p>Savings</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 30,000. <small class="text-success">20</small>  </h4>
                     <p> <small>As at 13:39 on 01/06/19</small> </p>
                   </div>
                 </div>
